prevent huge jumping of logo on load

--- a/apps/core/static/scss/_header.scss
+++ b/apps/core/static/scss/_header.scss
@@ -34,6 +34,9 @@
 }
 
 .header__brand-canvas {
+    height: 50px;
+    width: 60px;
+
     vertical-align: bottom;
 }
 
